test/inputs/toplevel/bad/duplicate-snippet-expansion.miros
string test
  snip first
  name this will fail
  snip second
